--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    max-width: 100%;
+    font-size: 16px;
     background-color: #f2f2f2;
     color: #333;
     text-align: center;
