--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     max-width: 100%;
-    font-size: 16px;
+    font-size: 14px;
     background-color: #f2f2f2;
     color: #333;
     text-align: center;
 }
 img{
+    max-width: 100%;
+    height: auto;
     border-radius: 50px 50px 50px 50px;
     position: center;
 }
