--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     text-align: center;
 }
 img{
+    width: 50%;
     max-width: 100%;
     height: auto;
     border-radius: 50px 50px 50px 50px;
